[gd_scene load_steps=5 format=2]

[ext_resource path="res://Nightmarun-Assets/Valuables/Skull.png" type="Texture" id=1]
[ext_resource path="res://IN-GAME-VALUABLES/Skull.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 10.5 )

[node name="Skull" type="KinematicBody2D"]
visible = false
position = Vector2( 780, 150 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, -1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Area2D/Sprite")

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
